# Rover_2023_2024

software/: .gitignore  Dockerfile.rover  Point Shared Style.kml  botanicalgarden.kml  cansetup.service  output.txt  rover-container.sh  rover.service  startRover.sh  startRoverOrin.sh  startupCAN.sh
software/environment/rover/UDEV_rules/: 99-rover-cameras.rules
software/firmware/modbus_master/: modbus_master.py  test.py
software/react_groundstation/: package-lock.json  package.json
software/react_groundstation/public/: index.html  manifest.json
software/react_groundstation/ros_packages/gps-mapper/: package.xml  setup.cfg  setup.py
software/react_groundstation/src/: App.css  App.js  index.js
software/react_groundstation/src/backend/: package.json  server.js
software/react_groundstation/src/components/: ArmControl.js  AxisOutput.js  CameraPanTilt.js  ChassisControl.js  ChassisManager.js  DriveInfo.js  FrontMountManager.js  GripperControl.js  JointConnectorDisplay.js  Light.js  LightControl.js  MiningControl.js  PanTiltControl.js  Slider.js  StatusLights.js  UseRunOnce.js  VideoManager.js
software/react_groundstation/src/lib/: constants.js  events.js  joypad.js  loop.js
software/ros_packages/: reset_encoders.py
software/ros_packages/joy_to_servo/: CMakeLists.txt  package.xml
software/ros_packages/joy_to_servo/src/: joy_to_servo_node.cpp
software/ros_packages/rover2_control/: setup.py
software/ros_packages/rover2_control_interface/: CMakeLists.txt
software/ros_packages/rover2_main/: package.xml
software/ros_packages/rover2_odometry/: setup.py
software/ros_packages/rover_arm/: .setup_assistant  CMakeLists.txt  README.md  package.xml
software/ros_packages/rover_arm_urdf/: CMakeLists.txt  package.xml
software/ros_packages/rover_camera/: CMakeLists.txt  package.xml
software/ros_packages/rover_camera/launch/: camera_launch.py
software/ros_packages/rover_camera/src/: gstream_cams.py  rover_camera.cpp
software/ros_packages/rover_camera_interface/: CMakeLists.txt  package.xml
software/scripts/: auto_chassis_pan.sh  example.py  gps_light.sh  gripper_test.sh  scimech_test.sh
(+75 files in other folders)
